--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,19 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^2.2",
+        "doctrine/orm": "^2.9",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
+        "symfony/dependency-injection": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/proxy-manager-bridge": "4.4.*",
+        "symfony/serializer": "4.4.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
